Дипломная работа добавлена авторизация JWT